[package]
name = "initiative-tracker-backend"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
todo = "warn"


[dependencies]
actix-web = "4"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }
config = "0.13.1"
dotenvy = "0.15.7"
thiserror = "1.0.50"
itertools = "0.12.0"
once_cell = "1.18.0"
serde = {version = "1.0.192", features = ["derive"] }
deadpool-postgres = { version = "0.11", features = ["serde"] }
pg_mapper = "0.2.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"