[package]
name = "initiative-tracker-backend"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
todo = "warn"

[lib]
proc-macro = true

[dependencies]
actix-web = "4"
actix-cors = "0.6.5"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }
config = "0.13.1"
dotenvy = "0.15.7"
env_logger = "0.10.1"
thiserror = "1.0.50"
itertools = "0.12.0"
once_cell = "1.18.0"
serde = {version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres"] }
sqlx-conditional-queries = { version = "0.1.3", features = ["postgres"] }
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.39"
openssl = { version="0.10.61", features = ["vendored"] }